--- a/SleepyWatcher WatchKit Extension/Info.plist
+++ b/SleepyWatcher WatchKit Extension/Info.plist
@@ -20,6 +20,10 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>To detect your sleepy</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>To detect your sleepy</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
