create Setting View & Top View

--- a/SleepyWatcher WatchKit Extension/Info.plist
+++ b/SleepyWatcher WatchKit Extension/Info.plist
@@ -37,6 +37,7 @@
 	<key>WKBackgroundModes</key>
 	<array>
 		<string>alarm</string>
+		<string>workout-processing</string>
 	</array>
 	<key>WKExtensionDelegateClassName</key>
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
